--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -66,7 +66,7 @@ jobs:
       uses: aws-actions/amazon-ecs-render-task-definition@v1
       with:
         task-definition: task-definition.json
-        container-name: web
+        container-name: ${{ vars.ECS_CONTAINER_NAME }}
         image: $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
         environment-variables: "LOG_LEVEL=info"
 
