--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -68,6 +68,7 @@ jobs:
         task-definition: task-definition.json
         container-name: ${{ vars.ECS_CONTAINER_NAME }}
         image: $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+        aws-region: ap-southeast-2
         environment-variables: "LOG_LEVEL=info"
 
     - name: Deploy to Amazon ECS service
