--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -64,8 +64,6 @@ jobs:
     - name: Render Amazon ECS task definition
       id: render-web-container
       uses: aws-actions/amazon-ecs-render-task-definition@v1
-      env:
-        AWS_REGION: ap-southeast-2
       with:
         task-definition: task-definition.json
         container-name: ${{ vars.ECS_CONTAINER_NAME }}
@@ -78,3 +76,4 @@ jobs:
         task-definition: ${{ steps.render-web-container.outputs.task-definition }}
         service: ${{ vars.ECS_SERVICE_NAME }}
         cluster: ${{ vars.ECS_CLUSTER_NAME }}
+        aws-region: ap-southeast-2
