add aws credentials for ecs deploy

--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -78,3 +78,5 @@ jobs:
         cluster: ${{ vars.ECS_CLUSTER_NAME }}
       env:
         AWS_REGION: ap-southeast-2
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
