--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -67,7 +67,7 @@ jobs:
       with:
         task-definition: task-definition.json
         container-name: ${{ vars.ECS_CONTAINER_NAME }}
-        image: $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+        image: ${{env.ECR_REGISTRY}}/${{env.ECR_REPOSITORY}}:${{env.IMAGE_TAG}}
         environment-variables: "LOG_LEVEL=info"
 
     - name: Deploy to Amazon ECS service
