--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -76,6 +76,7 @@ jobs:
         task-definition: ${{ steps.render-web-container.outputs.task-definition }}
         service: ${{ vars.ECS_SERVICE_NAME }}
         cluster: ${{ vars.ECS_CLUSTER_NAME }}
+        wait-for-service-stability: true
       env:
         AWS_REGION: ap-southeast-2
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
