--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -27,9 +27,11 @@ jobs:
       - name: Test with pytest
         run: |
           pytest FastAPI_practice/tests
+
   build:
     runs-on: ubuntu-latest
-
+    outputs:
+      image_name: ${{ steps.build-image.outputs.image_name }}
     steps:
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
@@ -54,7 +56,7 @@ jobs:
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
         echo "Pushing image to ECR..."
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-        echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
+        echo "image_name=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> "$GITHUB_OUTPUT"
 
   deploy:
     runs-on: ubuntu-latest
@@ -65,13 +67,11 @@ jobs:
       id: render-web-container
       uses: aws-actions/amazon-ecs-render-task-definition@v1
       env:
-        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        ECR_REPOSITORY: ${{ vars.ECR_REPO_NAME }}
-        IMAGE_TAG: latest
+        IMAGE_NAME: ${{needs.build.outputs.image_name}}
       with:
         task-definition: task-definition.json
         container-name: ${{ vars.ECS_CONTAINER_NAME }}
-        image: ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}
+        image: ${{ env.IMAGE_NAME }}
         environment-variables: "LOG_LEVEL=info"
 
     - name: Deploy to Amazon ECS service
