--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -29,6 +29,7 @@ jobs:
           pytest FastAPI_practice/tests
 
   build:
+    needs: test
     runs-on: ubuntu-latest
     outputs:
       image_name: ${{ steps.build-image.outputs.image_name }}
@@ -59,6 +60,7 @@ jobs:
         echo "image_name=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> "$GITHUB_OUTPUT"
 
   deploy:
+    needs: [test, build]
     runs-on: ubuntu-latest
     
     steps:
