logic to ecr again to get repo name
cannot pass full image name from previous job as github action thinks it contains secret

--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -31,8 +31,7 @@ jobs:
   build:
     needs: test
     runs-on: ubuntu-latest
-    outputs:
-      image_name: ${{ steps.build-image.outputs.image_name }}
+ 
     steps:
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
@@ -57,23 +56,28 @@ jobs:
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
         echo "Pushing image to ECR..."
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-        echo "image_name=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> "$GITHUB_OUTPUT"
 
   deploy:
     needs: [test, build]
     runs-on: ubuntu-latest
     
     steps:
+    - name: Login to Amazon ECR
+      id: login-ecr
+      uses: aws-actions/amazon-ecr-login@v1
+
     - uses: actions/checkout@v3
     - name: Render Amazon ECS task definition
       id: render-web-container
       uses: aws-actions/amazon-ecs-render-task-definition@v1
       env:
-        IMAGE_NAME: ${{needs.build.outputs.image_name}}
+        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+        ECR_REPOSITORY: ${{ vars.ECR_REPO_NAME }}
+        IMAGE_TAG: latest
       with:
         task-definition: task-definition.json
         container-name: ${{ vars.ECS_CONTAINER_NAME }}
-        image: ${{ env.IMAGE_NAME }}
+        image: ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}
         environment-variables: "LOG_LEVEL=info"
 
     - name: Deploy to Amazon ECS service
