--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -62,6 +62,13 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ap-southeast-2
+
     - name: Login to Amazon ECR
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v1
@@ -87,7 +94,3 @@ jobs:
         service: ${{ vars.ECS_SERVICE_NAME }}
         cluster: ${{ vars.ECS_CLUSTER_NAME }}
         wait-for-service-stability: true
-      env:
-        AWS_REGION: ap-southeast-2
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
