Update action.yml to add prod deploy

--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -94,3 +94,41 @@ jobs:
         service: ${{ vars.ECS_SERVICE_NAME }}-staging
         cluster: ${{ vars.ECS_CLUSTER_NAME }}-staging
         wait-for-service-stability: true
+
+  deploy-production:
+    needs: [deploy-staging]
+    runs-on: ubuntu-latest
+    
+    steps:
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ap-southeast-2
+
+    - name: Login to Amazon ECR
+      id: login-ecr
+      uses: aws-actions/amazon-ecr-login@v1
+
+    - uses: actions/checkout@v3
+    - name: Render Amazon ECS task definition
+      id: render-web-container
+      uses: aws-actions/amazon-ecs-render-task-definition@v1
+      env:
+        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+        ECR_REPOSITORY: ${{ vars.ECR_REPO_NAME }}
+        IMAGE_TAG: latest
+      with:
+        task-definition: task-definition.json
+        container-name: ${{ vars.ECS_CONTAINER_NAME }}
+        image: ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}
+        environment-variables: "LOG_LEVEL=info"
+
+    - name: Deploy to Amazon ECS service
+      uses: aws-actions/amazon-ecs-deploy-task-definition@v1
+      with:
+        task-definition: ${{ steps.render-web-container.outputs.task-definition }}
+        service: ${{ vars.ECS_SERVICE_NAME }}-production
+        cluster: ${{ vars.ECS_CLUSTER_NAME }}-production
+        wait-for-service-stability: true
