--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -82,7 +82,7 @@ jobs:
         ECR_REPOSITORY: ${{ vars.ECR_REPO_NAME }}
         IMAGE_TAG: latest
       with:
-        task-definition: task-definition.json
+        task-definition: aws_config/task-definition.json
         container-name: ${{ vars.ECS_CONTAINER_NAME }}
         image: ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}
         environment-variables: "LOG_LEVEL=info"
@@ -129,7 +129,7 @@ jobs:
         ECR_REPOSITORY: ${{ vars.ECR_REPO_NAME }}
         IMAGE_TAG: latest
       with:
-        task-definition: task-definition.json
+        task-definition: aws_config/task-definition.json
         container-name: ${{ vars.ECS_CONTAINER_NAME }}
         image: ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}
         environment-variables: "LOG_LEVEL=info"
